trying to make it better

--- a/src/app/festival-program/festival-program.component.html
+++ b/src/app/festival-program/festival-program.component.html
@@ -22,95 +22,96 @@
                 <td colspan="3" style="background-color: #ccffcc;">Doors Open / Meet & Greet / Refreshments</td>
             </tr>
             <tr>
+                <td colspan="4" style="background-color: #ccccff;">4pm hour</td>
+            </tr>
+           <tr>
                 <td>4pm</td>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>The Conversion</td>
+                <td>Mother's Day</td>
+                <td>A Dinner Party From Hell</td>
             </tr>
             <tr>
                 <td>4:15</td>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>You're Beautiful </td>
+                <td>The Opener</td>
+                <td>Maybe it's the Apocalypse</td>
             </tr>
             <tr>
                 <td>4:30</td>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>Tarzan's Escape</td>
+                <td>Milk Dreams</td>
+                <td>Gary</td>
             </tr>
             <tr>
                 <td>4:45</td>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>Color of Sky</td>
+                <td>Mike Sizzer</td>
+                <td>The House</td>
             </tr>
 
             <tr>
-                <td colspan="4" style="background-color: #ccccff;">5pm hour features Washington State Films</td>
+                <td colspan="4" style="background-color: #ccccff;">5pm hour</td>
             </tr>
             <tr>
                 <td>5pm</td>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>Embers</td>
+                <td>Feel it to Heal it</td>
+                <td>Kurt</td>
             </tr>
             <tr>
-                <td>5:15</td>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>5:20</td>
+                <td>Room 13</td>
+                <td>MARBLE - red room</td>
+                <td>Balloon</td>
             </tr>
             <tr>
-                <td>5:30</td>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>5:40</td>
+                <td>Moving On</td>
+                <td>Cuz You're My Girl</td>
+                <td>Nowhere to Escape</td>
             </tr>
             <tr>
-                <td>5:45</td>
-                <td colspan="3" style="background-color: #ccffcc;">Intermission</td>
+                <td colspan="4" style="background-color: #ccccff;">6pm hour</td>
             </tr>
             <tr>
                 <td>6pm</td>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>STAY</td>
+                <td>The Artifact</td>
+                <td>The Ghosts They Carry</td>
             </tr>
             <tr>
                 <td>6:15</td>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>Kitsune</td>
+                <td>Amidst the Stars</td>
+                <td>Something Behind the Walls</td>
             </tr>
             <tr>
                 <td>6:30</td>
-                <td colspan="3" style="background-color: #ccffcc;">Intermission</td>
+                <td></td>
+                <td></td>
+                <td>My Happy Place</td>
             </tr>
             <tr>
-                <td>6:45<br>&nbsp;<br></td>
+                <td colspan="4" style="background-color: #ccccff;">Main Event</td>
+            </tr>
+            <tr>
+                <td>6:45</td>
+                <td>Manly Men of the Mountains</td>
+                <td style="background-color: #777;"></td>
+                <td style="background-color: #777;"></td>
+            </tr>
+            <tr>
+                <td>7:05</td>
+                <td>Neshamah</td>
+                <td style="background-color: #777;"></td>
+                <td style="background-color: #777;"></td>
+            </tr>           <tr>
+                <td>7:30<br>&nbsp;<br></td>
                 <td style="background-color: #ffcccc;">Awards Ceremony</td>
                 <td style="background-color: #777;"></td>
                 <td style="background-color: #777;"></td>
             </tr>
-            <tr>
-                <td>7:15</td>
-                <td>TBD</td>
-                <td style="background-color: #777;"></td>
-                <td style="background-color: #777;"></td>
-            </tr>
-            <tr>
-                <td>7:30</td>
-                <td>TBD</td>
-                <td style="background-color: #777;"></td>
-                <td style="background-color: #777;"></td>
-            </tr>
-            <tr>
-                <td>7:45</td>
-                <td>TBD</td>
-                <td style="background-color: #777;"></td>
-                <td style="background-color: #777;"></td>
-            </tr>
+
        </table>
        <app-button [routerLink]="['/tickets']" [name]="'Venue'" [icon]="'ticket'"></app-button>
 
