--- a/src/app/main-menu/main-menu.component.scss
+++ b/src/app/main-menu/main-menu.component.scss
@@ -3,6 +3,15 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 }
+.award-box {
+	display: inline-block;
+	border: 1px solid black; 
+	background-color: #aaa;
+	color: black;
+	border-radius: 5px;
+	margin: 10px; 
+	padding: 5px;
+}
 
 @media screen and (max-width: 776px) {
 	//narrow
